--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "jupyter>=1.1.1",
     "kaggle>=1.7.4.5",
+    "matplotlib>=3.10.3",
     "opendatasets>=0.1.22",
     "pandas>=2.3.1",
     "scikit-learn>=1.7.0",
