--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "matplotlib>=3.10.3",
     "opendatasets>=0.1.22",
     "pandas>=2.3.1",
+    "plotly>=6.2.0",
+    "prophet>=1.1.7",
     "scikit-learn>=1.7.0",
     "scikit-optimize>=0.10.2",
     "statsmodels>=0.14.5",
